<resources>
    <string name="app_name">My Application</string>
    <string name="enter_length">Enter Length</string>
    <string name="calculate">Calculate</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="rectangle_screen_title">Calculate Area Of Rectangle</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="call">Call</string>
    <string name="location">Location</string>
    <string name="browse">Browse</string>
    <string name="delivery_to">deliver To</string>
    <string name="set_delivery_location">Set Delivery Location</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="favorite">Favorite</string>
    <string name="music">Music</string>
    <string name="places">Places</string>
    <string name="news">News</string>
    <string name="userName">Mohamed Atef</string>
    <string name="taxi">Taxi</string>
    <string name="call_driver">Call Driver</string>
    <string name="distance">Distance</string>
    <string name="price">Price</string>
    <string name="eta">ETA</string>
    <string name="payment">Payment</string>
</resources>