<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"/>
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/call"
        android:title="@string/call"
        android:icon="@drawable/ic_call"
        app:showAsAction="always"/>
    <item
        android:id="@+id/location"
        android:title="@string/location"
        android:icon="@drawable/ic_location"
        app:showAsAction="always"/>
    <item
        android:id="@+id/browse"
        android:title="@string/browse"
        android:icon="@drawable/ic_chrome"
        app:showAsAction="always"/>
</menu>