<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/profile_background_shape">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/atef"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/profilePic"
        app:layout_constraintTop_toTopOf="@+id/profilePic"
        android:layout_marginStart="10dp"/>
    <ImageView
        android:id="@+id/vehicleImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_taxi"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        app:layout_constraintStart_toStartOf="@+id/tvUserName"
         />
    <TextView
        android:id="@+id/tvVehicleType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxi"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/vehicleImage"
        app:layout_constraintTop_toTopOf="@+id/vehicleImage"
        app:layout_constraintBottom_toBottomOf="@+id/vehicleImage"
        android:layout_marginStart="10dp"/>
    <RatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:isIndicator="false"
        android:theme="@style/RatingBar"
        android:stepSize="1.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:numStars="5"
        android:rating="4"
        app:layout_constraintStart_toStartOf="@id/tvUserName"
        app:layout_constraintTop_toBottomOf="@id/vehicleImage"/>
    <TextView
        android:id="@+id/tvRatingVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4.5"
        android:textColor="@color/gold"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toTopOf="@id/ratingBar"
        app:layout_constraintBottom_toBottomOf="@id/ratingBar"/>
    <ImageView
        android:id="@+id/btnCall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_call_uber"
        app:layout_constraintTop_toTopOf="@id/tvUserName"
        app:layout_constraintStart_toEndOf="@+id/tvUserName"
        app:layout_constraintBottom_toBottomOf="@+id/profilePic"
        app:layout_constraintEnd_toStartOf="@+id/btnChat"/>
    <ImageView
        android:id="@+id/btnChat"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_chat"
        app:layout_constraintTop_toTopOf="@id/tvUserName"
        app:layout_constraintStart_toEndOf="@+id/btnCall"
        app:layout_constraintBottom_toBottomOf="@+id/profilePic"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/profilePic"
        android:id="@+id/view_"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"/>
    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textSize="16sp"

        android:layout_marginTop="15dp"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/profilePic"
        app:layout_constraintStart_toStartOf="@id/profilePic"
        app:layout_constraintTop_toBottomOf="@+id/view_"/>
    <TextView
        android:id="@+id/distanceVal"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3km"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tvDistance"
        app:layout_constraintEnd_toEndOf="@+id/tvDistance"
        app:layout_constraintTop_toBottomOf="@id/tvDistance"/>

    <TextView
        android:id="@+id/tvPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textSize="16sp"

        android:layout_marginTop="15dp"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/btnChat"
        app:layout_constraintStart_toStartOf="@id/btnChat"
        app:layout_constraintTop_toBottomOf="@+id/view_"/>
    <TextView
        android:id="@+id/paymentVal"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cash"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tvPayment"
        app:layout_constraintEnd_toEndOf="@+id/tvPayment"
        app:layout_constraintTop_toBottomOf="@id/tvPayment"/>
    <TextView
        android:id="@+id/tvEta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eta"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@+id/btnCall"
        app:layout_constraintEnd_toStartOf="@id/btnCall"
        app:layout_constraintTop_toBottomOf="@+id/view_"/>
    <TextView
        android:id="@+id/EtaVal"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="04:05 AM"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tvEta"
        app:layout_constraintEnd_toEndOf="@+id/tvEta"
        app:layout_constraintTop_toBottomOf="@id/tvPayment"/>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@+id/vehicleImage"
        app:layout_constraintEnd_toEndOf="@id/tvVehicleType"
        app:layout_constraintTop_toBottomOf="@+id/view_"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100 EGP"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tvPrice"
        app:layout_constraintEnd_toEndOf="@+id/tvPrice"
        app:layout_constraintTop_toTopOf="@id/paymentVal"/>
</androidx.constraintlayout.widget.ConstraintLayout>