<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RectangleActivity">
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rectangle_screen_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="20dp"
            android:src="@drawable/square"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="@id/tvTitle" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLength"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/multiplyImage"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/hintColor"
            android:textColor="@color/primary"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:hint="@string/length"
            android:textColorHint="@color/primary"
            android:textSize="13sp"
            android:layout_margin="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etLength"
                android:layout_marginTop="5dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:inputType="number|textMultiLine"
                android:maxLines="1"
                android:lines="1"
                android:gravity="top|left" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/multiplyImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toEndOf="@id/tilLength"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@id/tilWidth"
            android:src="@drawable/multiply"
            android:layout_marginTop="20dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWidth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/multiplyImage"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/hintColor"
            android:textColor="@color/primary"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:hint="@string/width"
            android:textColorHint="@color/primary"
            android:textSize="13sp"
            android:layout_margin="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etLength"
                android:layout_marginTop="5dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:inputType="number|textMultiLine"
                android:maxLines="1"
                android:lines="1"
                android:gravity="top|left" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintTop_toBottomOf="@+id/multiplyImage"
            android:text="@string/calculate"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:id="@+id/btnCalculate"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.DateSelectionButton.Primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="25dp" />

        <TextView
            android:layout_margin="20dp"
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Result"
            android:textSize="20sp"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>