<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.SignInActivity"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:src="@drawable/square"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            android:textColor="@color/primary"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:hint="@string/enter_username"
            android:textColorHint="@color/primary"
            android:textSize="13sp"
            android:layout_margin="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etUserName"
                android:layout_marginTop="5dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:inputType="textPersonName|textMultiLine"
                android:maxLines="1"
                android:lines="1"
                android:gravity="top|left" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_name"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            android:textColor="@color/primary"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:hint="@string/enter_email"
            android:textColorHint="@color/primary"
            android:textSize="13sp"
            android:layout_margin="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:layout_marginTop="5dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:inputType="textPersonName|textMultiLine"
                android:maxLines="1"
                android:lines="1"
                android:gravity="top|left" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            app:layout_constraintStart_toStartOf="@+id/til_email"
            app:layout_constraintEnd_toEndOf="@id/til_email"
            android:text="@string/sign_in"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/red_button_shape" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>